--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <!-- Favicons -->
+      <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+      <link rel="icon" href="/favicon-32.png" sizes="32x32" type="image/png">
+      <link rel="icon" href="/favicon-16.png" sizes="16x16" type="image/png">
+      <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+      <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#10b981">
+    <meta name="theme-color" content="#0b0b0f"> 
+    <title>The Book of Memories</title>
   </head>
   <body>
     <div id="root"></div>
