--- a/index.html
+++ b/index.html
@@ -1,18 +1,27 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <!-- Favicons -->
-      <link rel="icon" href="/favicon.svg" type="image/svg+xml">
-      <link rel="icon" href="/favicon-32.png" sizes="32x32" type="image/png">
-      <link rel="icon" href="/favicon-16.png" sizes="16x16" type="image/png">
-      <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-      <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#10b981">
-    <meta name="theme-color" content="#0b0b0f"> 
-    <title>The Book of Memories</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+
+  <!-- Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600&display=swap" rel="stylesheet" />
+
+  <!-- Favicon -->
+  <!-- Favicons -->
+  <link rel="icon" type="image/svg+xml" href="/aj.svg?v=3">
+  <link rel="apple-touch-icon" href="/aj.svg?v=3">
+  <meta name="theme-color" content="#0b0b0f">
+
+  <!-- Theme -->
+  <meta name="theme-color" content="#0b0b0f" />
+
+  <title>The Book of Memories</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
